@@ -43,6 +43,7 @@ if($online_tests) {
 	open(my $enabled, '>', 't/online.enabled') || die "Can't touch t/online.enabled $!";
 	close($enabled) || die "Can't touch t/online.enabled $!";
 	$test_requires->{'Test::LWP::UserAgent'} = 0;
+	$test_requires->{'DateTime'} = 0;
 	if(defined($ENV{'TIMEZONEDB_KEY'})) {
 		$test_requires->{'TimeZone::TimeZoneDB'} = 0;
 	}
@@ -67,6 +68,7 @@ WriteMakefile(
 		'JSON::MaybeXS' => 0,
 		'LWP::UserAgent' => 0,
 		'LWP::Protocol::https' => 0,
+		'Scalar::Util' => 0,
 		'URI' => 0,
 	},
 	dist		=> { COMPRESS => 'gzip -9f', SUFFIX => 'gz', },
